<?xml version="1.0"?>
<package format="2">
  <name>squirrel_demo_behaviors</name>
  <version>0.0.0</version>
  <description>The squirrel_demo_behaviors package</description>

  <maintainer email="bajo@todo.todo">bajo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>tf</depend>
  <depend>uashh_smach</depend>

</package>
